--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -27,7 +27,7 @@
     </header>
     <section>
       <ng-container *ngFor="let hiddenField of hiddenFields">
-        <input type="hidden" [name]="hiddenField.name" [value]="hiddenField.value" />
+        <input type="hidden" [name]="hiddenField?.name" [value]="hiddenField?.value" />
       </ng-container>
       <ng-container *ngFor="let row of formFields">
         <div class="row" *ngIf="row.cols">
@@ -35,25 +35,25 @@
             <div [class]="row.colClassName" *ngFor="let col of row.cols">
               <div class="form-group">
                 <label [for]="col?.name">
-                  {{ col.text }}
+                  {{ col?.text }}
                   <button
                     type="button"
                     class="btn btn-info"
-                    ngbTooltip="{{ col.infoText }}"
+                    ngbTooltip="{{ col?.infoText }}"
                     tooltipClass="form-tooltip"
-                    *ngIf="col.infoIcon"
+                    *ngIf="col?.infoIcon"
                   >
                     <i class="info-icon" aria-hidden="true"></i>
                     <span class="sr-only">Click here for more information</span>
                   </button>
-                  <ng-container *ngIf="!col?.validation?.required"> (Optional) </ng-container>
+                  <ng-container *ngIf="!col?.validation?.required && col?.name !== 'contribution_aggregate'"> (Optional) </ng-container>
                 </label>
                 <ng-container *ngIf="col?.type === 'text' || col?.type === 'date' || col?.type === 'checkbox'">
-                    <div [ngClass]="{'input-group': col.inputGroup}">
-                      <ng-container *ngIf="col.inputGroup">
+                    <div [ngClass]="{'input-group': col?.inputGroup}">
+                      <ng-container *ngIf="col?.inputGroup">
                         <div class="input-group-prepend">
                           <span class="input-group-text">
-                            <i [class]="col.inputIcon" aria-hidden="true"></i>
+                            <i [class]="col?.inputIcon" aria-hidden="true"></i>
                           </span>
                         </div>                        
                       </ng-container>
