--- a/front-end/src/app/reports/reportdetails/reportdetails.component.html
+++ b/front-end/src/app/reports/reportdetails/reportdetails.component.html
@@ -48,7 +48,9 @@
                     [class]="getSortClass('filed_date')" 
                     (click)="changeSortDirection('filed_date')">Filed/Saved Date Time
                 </th>                        
-                                                                    
+                <th>
+               &nbsp;
+            </th>                                                                       
                <!-- <th class="bulk_action">
                     <div *ngIf="isReportViewActive()" class="btn-group" 
                             ngbDropdown role="group" aria-label="Action dropdown">
