--- a/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.html
+++ b/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.html
@@ -4,8 +4,8 @@
       <div class="grid-row__col grid-row__col--6">
         <h1>Financial Summary</h1>
       </div>
-      <div class="grid-row__col grid-row__col--6 text-right">
-        <div *ngIf ="viewMode === 'tab1'">
+     <div class="grid-row__col grid-row__col--6 text-right">
+       <!-- <div *ngIf ="viewMode === 'tab1'">
         <button
           type="button"
           class="btn btn-secondary-gray"
@@ -22,7 +22,7 @@
         >
          Browse Disbursements
         </button>
-      </div>
+      </div> -->
         <div class="float-right"   ngbDropdown role="group" aria-label="Action dropdown">
           <button
             type="button"
@@ -73,14 +73,52 @@
           </button>
         </div>
       </div>
+      <div class="space"></div>
+      <div class="row">
+        <div class="grid-row__col grid-row__col-- text-right">
+          <div *ngIf ="viewMode === 'tab1'">
+          <button
+            type="button"
+            class="btn btn-secondary-gray btn-left"
+            (click)="viewTransactions()"
+          >
+           Browse Receipts
+          </button>
+        </div>
+         <div *ngIf ="viewMode === 'tab2'">
+          <button
+            type="button"
+            class="btn btn-secondary-gray btn-left"
+            (click)="viewTransactions()"
+          >
+           Browse Disbursements
+          </button>
+        </div>      
+      </div>
+      </div>
+      <div class="row">
       <div class="tab-container" [ngSwitch]="viewMode">
         <div id="tab1" *ngSwitchDefault>
           <table class="summary_table_text">
             <thead>
               <tr>
                   <th class="summary_text_amt">&nbsp;</th>
-                  <th class="summary_text_amt"><h3>Total This Period</h3></th>
-                  <th class="summary_text_amt"><h3>Calendar Year-to-Date</h3></th>
+                  <th class="summary_text_amt"><h3>Total This Period
+                      <button type="button" class="btn-info" ngbTooltip="Language will be provided by RAD">
+                          <i class="info-icon" aria-hidden="true"></i>
+                          <span class="sr-only">
+                            Click for more information
+                          </span>
+                        </button>
+                  </h3></th>
+                  <th class="summary_text_amt"><h3>Calendar Year-to-Date
+                      <button type="button" class="btn-info " ngbTooltip="Language will be provided by RAD">
+                          <i class="info-icon" aria-hidden="true"></i>
+                          <span class="sr-only">
+                            Click for more information
+                          </span>
+                        </button>
+                  </h3></th>
               </tr>
             </thead>
             <tbody *ngIf="tab1Data" class="summary_text">
@@ -191,11 +229,12 @@
         <div id="tab3" *ngSwitchCase="'tab3'">
           <table class="cash-on-hand-table">
             <tbody *ngIf="tab3Data">
-This functionality is not yet implemented
+                <div>&nbsp;&nbsp;&nbsp;&nbsp;This functionality is not yet implemented</div>
             </tbody>
           </table>
         </div>
       </div>
+      </div>  
     </div>
   </section>
   <footer>
