Fne 839 mahendra sprint15 (#636)
* FNE 1181 changes

* FNE 1181

* FNE 1181 changes

* FNE 1181 changes

* FNE 1181 changes

* FNE-1181 changes

* FNE-795 changes

* FNE-795 changes

* FNE-1189 changes

* FNE -1064 changes

* FNE-1181 changes

* FNE-931 changes

* FNE 795 change

* FNE-1181 changes

* FNE - 1181 changes

* remove extra section from report type sidebar

* FNE-795 changes

--- a/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.html
@@ -111,9 +111,9 @@
       </div>
     </form>
   </section>
-  <footer>
+  <!--<footer>
     <div class="form-sidebar__item">
-     <!-- <div class="form-sidebar-item__text">
+      <div class="form-sidebar-item__text">
         Cash On Hand
       </div>
       <div class="form-sidebar-item__value">
@@ -130,7 +130,7 @@
         <button type="button" class="btn btn-secondary">
           Sign &amp; Submit
         </button>
-      </div>-->
+      </div>
     </div>
-  </footer>
+  </footer>-->
 </div>
