Fne 839 mahendra sprint15 (#638)
* FNE 1181 changes

* FNE 1181

* FNE 1181 changes

* FNE 1181 changes

* FNE 1181 changes

* FNE-1181 changes

* FNE-795 changes

* FNE-795 changes

* FNE-1189 changes

* FNE -1064 changes

* FNE-1181 changes

* FNE-931 changes

* FNE 795 change

* FNE-1181 changes

* FNE - 1181 changes

* remove extra section from report type sidebar

* FNE-795 changes

* FNE - 1181 changes

* FNE 795 changes

* FNE - 795 changes

* FNE - 795 changes

* FNE 931 changes

* FNE - 931 changes

--- a/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.scss
+++ b/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.scss
@@ -124,13 +124,13 @@
     //height:40px;
     border-spacing: 0.25px !important;
     border: 1px !important;
-    padding-left: 50px;
-    padding-right: 100px;
+    padding-left: 10px;
+    //padding-right: 100px;
     padding-top: 10px;
     padding-bottom: 10px;
     //border-spacing: .25px 0.25px !important;
     table-layout: fixed ;
-    width: 100% ;
+    width: 99% ;
   }
   .summary_text_amt{
     text-align: right;
