--- a/front-end/src/app/reports/reportheader/reportheader.component.html
+++ b/front-end/src/app/reports/reportheader/reportheader.component.html
@@ -14,10 +14,12 @@
         <div class="header-content">
           <header>
               <div class="header-container">
-                <h1 class="pb-1 m-3 border-bottom">Reports</h1>
-              </div>
+                <!--<h1 class="pb-1 m-3 border-bottom">Reports</h1>-->
+                  <h1>Reports</h1>
+                </div>
             </header>      
-            <div>      
+            <div> 
+            <div class="space"></div>       
             <div class="grid-row">
                  <div class="grid-row__col grid-row__col--12">
                    <div class="transactions__btn-container">                 
@@ -51,8 +53,9 @@
                        </div>              
                      </div> -->
                    </div>
-            </div>   
+              </div>   
             </div>
+            <div class="space"></div>
             <div class="grid-row">
               <div class="grid-row__col grid-row__col--12">
                 <div class="transactions__btn-container">
