--- a/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.html
+++ b/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.html
@@ -139,16 +139,16 @@
                 </td>
                 <td>
                   <div *ngIf=" row.level === 1 "  class="summary_text_amt_level_1" >
-                      <a [routerLink]="['/forms/transactions/', '3X']" [queryParams]="{ report_id: reportId }">{{ row.amt | currency:'USD':'symbol-narrow':'1.2-2'}}</a>
+                      <a href="javascript:void(0);" (click)="viewTransactions()">{{ row.amt | currency:'USD':'symbol-narrow':'1.2-2'}}</a>
                   </div>
                   <div *ngIf=" row.level === 2 "  class="summary_text_amt_level_2" >
-                      <a [routerLink]="['/forms/transactions/', '3X']" [queryParams]="{ report_id: reportId }">{{ row.amt | currency:'USD':'symbol-narrow':'1.2-2'}}</a>                  
+                      <a  href="javascript:void(0);" (click)="viewTransactions()">{{ row.amt | currency:'USD':'symbol-narrow':'1.2-2'}}</a>                  
                     </div>
                   <div *ngIf=" row.level === 3 "  class="summary_text_amt_level_3" >
-                      <a [routerLink]="['/forms/transactions/', '3X']" [queryParams]="{ report_id: reportId }">{{ row.amt | currency:'USD':'symbol-narrow':'1.2-2'}}</a>                  
+                      <a  href="javascript:void(0);" (click)="viewTransactions()">{{ row.amt | currency:'USD':'symbol-narrow':'1.2-2'}}</a>                  
                     </div>
                   <div *ngIf=" row.level === 4 "  class="summary_text_amt_level_4" >
-                      <a [routerLink]="['/forms/transactions/', '3X']" [queryParams]="{ report_id: reportId }">{{ row.amt | currency:'USD':'symbol-narrow':'1.2-2'}}</a>                  
+                      <a  href="javascript:void(0);" (click)="viewTransactions()">{{ row.amt | currency:'USD':'symbol-narrow':'1.2-2'}}</a>                  
                     </div>                  
                 </td>  
                 <td>
@@ -195,20 +195,20 @@
                   </div>
                 </td>
                 <td>
-                  <div *ngIf=" row.level === 1 "  class="summary_text_amt_level_1" >
-                      <a [routerLink]="['/forms/transactions/', '3X']" [queryParams]="{ report_id: reportId }">{{ row.amt | currency:'USD':'symbol-narrow':'1.2-2'}}</a>
-                  </div>
-                  <div *ngIf=" row.level === 2 "  class="summary_text_amt_level_2" >
-                      <a [routerLink]="['/forms/transactions/', '3X']" [queryParams]="{ report_id: reportId }">{{ row.amt | currency:'USD':'symbol-narrow':'1.2-2'}}</a>
-                  </div>
-                  <div *ngIf=" row.level === 3 "  class="summary_text_amt_level_3" >
-                      <a [routerLink]="['/forms/transactions/', '3X']" [queryParams]="{ report_id: reportId }">{{ row.amt | currency:'USD':'symbol-narrow':'1.2-2'}}</a>
-                  </div>
-                  <div *ngIf=" row.level === 4 "  class="summary_text_amt_level_4" >
-                      <a [routerLink]="['/forms/transactions/', '3X']" [queryParams]="{ report_id: reportId }">{{ row.amt | currency:'USD':'symbol-narrow':'1.2-2'}}</a>
-                  </div>                  
-                </td>  
-                <td>
+                    <div *ngIf=" row.level === 1 "  class="summary_text_amt_level_1" >
+                        <a href="javascript:void(0);" (click)="viewTransactions()">{{ row.amt | currency:'USD':'symbol-narrow':'1.2-2'}}</a>
+                    </div>
+                    <div *ngIf=" row.level === 2 "  class="summary_text_amt_level_2" >
+                        <a  href="javascript:void(0);" (click)="viewTransactions()">{{ row.amt | currency:'USD':'symbol-narrow':'1.2-2'}}</a>                  
+                      </div>
+                    <div *ngIf=" row.level === 3 "  class="summary_text_amt_level_3" >
+                        <a  href="javascript:void(0);" (click)="viewTransactions()">{{ row.amt | currency:'USD':'symbol-narrow':'1.2-2'}}</a>                  
+                      </div>
+                    <div *ngIf=" row.level === 4 "  class="summary_text_amt_level_4" >
+                        <a  href="javascript:void(0);" (click)="viewTransactions()">{{ row.amt | currency:'USD':'symbol-narrow':'1.2-2'}}</a>                  
+                      </div>                  
+                  </td>  
+                  <td>
                     <div *ngIf=" row.level === 1 "  class="summary_text_amt_level_1" >
                         {{ row.amt_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
                     </div>
