--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.scss
@@ -30,8 +30,8 @@
  .search .fa-search {
    color: $shuttleGray;
    position: absolute;
-   top: 10px;
-   right: 20px;
+   top: 12px;
+   right: 10%;
  }
 
   // }
