--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -61,10 +61,10 @@
                         class="form-control"
                         [style.width]="col?.width"
                         [style.height]="col?.height"
-                        [type]="col?.type"
-                        [name]="col?.name"
-                        [readonly]="col?.name === 'contribution_aggregate' && col.type === 'text' ? true : null"
-                        [value]="col?.name === 'contribution_aggregate' ? '0.00' : null"
+                        [attr.type]="col?.type"
+                        [attr.name]="col?.name"
+                        [attr.readonly]="col?.name === 'contribution_aggregate' && col.type === 'text' ? true : null"
+                        [attr.value]="col?.name === 'contribution_aggregate' ? '0.00' : null"
                         [maxlength]="col?.validation?.max"
                         [formControlName]="col?.name"
                         (blur)="col?.name === 'contribution_amount' ? contributionAmountChange($event) : null"
@@ -128,7 +128,8 @@
                     [style.height]="col?.height"
                     [style.width]="col?.width"
                     [style.overflow]="col.scroll ? col.scroll : null"
-                    [name]="col?.name" 
+                    [attr.name]="col?.name" 
+                    [attr.maxlength]="col?.validation?.max"
                     [formControlName]="col?.name"
                   ></textarea>
                 </ng-container>
