--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -64,7 +64,7 @@
                         [attr.type]="col?.type"
                         [attr.name]="col?.name"
                         [attr.readonly]="col?.name === 'contribution_aggregate' && col.type === 'text' ? true : null"
-                        [attr.value]="col?.name === 'contribution_aggregate' ? '0.00' : null"
+                        [attr.value]="col?.value"
                         [maxlength]="col?.validation?.max"
                         [formControlName]="col?.name"
                         (blur)="col?.name === 'contribution_amount' ? contributionAmountChange($event) : null"
@@ -130,6 +130,7 @@
                     [style.height]="col?.height"
                     [attr.type]="col?.type"
                     [attr.name]="col?.name"
+                    [attr.value]="col?.value"
                     [checked]="col?.name === 'memo_code' ? memoCode : null"
                     [formControlName]="col?.name"
                     (change)="col?.name === 'memo_code' ? memoCodeChange($event) : null"
