Fne 1261 sprint16 mahendra (#672)
* contacts view added

* FNE-1261 inconsistency bug fixing

* FNE-1261 inconsistency bug fix

* updates for adding new committee

* FNE 1245 print preview changes

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -1,5 +1,5 @@
 <div class="individual-receipt-container">
-  <form [formGroup]="frmIndividualReceipt" (ngSubmit)="doValidateReceipt()">
+  <form [formGroup]="frmIndividualReceipt" >
     <header>
       <div class="header-content">
         <div class="float-left">
@@ -189,7 +189,7 @@
               <button class="btn btn-previous btn-left" type="button" (click)="previousStep()">
                 Previous
               </button>
-              <button class="btn btn-secondary btn-right" type="submit">
+              <button class="btn btn-secondary btn-right" (click)="doValidateReceipt()">
                 Save &amp; Add Transaction
               </button>
               <a class="btn btn-previous btn-right" (click)="viewTransactions()">
