--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -4,9 +4,11 @@
   padding-right: 10px;
   .row {
     margin-left: 0;
-    margin-right: 0;    
-    .col-md-12 {
-      padding-left: 5px;
+    margin-right: 0;
+    .col-md-4,
+    .col-lg-4 {
+      flex: 0 0 28.33333333%;
+      max-width: 28.33333333%;
     }
   }
   form {
@@ -76,7 +78,7 @@
           }
           label {
             font-family: 'sans-serif';
-            font-size: 13px;
+            font-size: 1rem;
           }
           /**
            * Custom CSS for state dropdown component.
