Fne 777 mahendra sprint17 (#695)
* contact folder add

* new files added

* new files added

* no need for this file

* new folder added

* files added

* Delete readme

* Create readme

* Add files via upload

* Delete readme

* Create readme

* Add files via upload

* Delete readme

* Create readme

* Add files via upload

* Delete readme

* Create readme

* Add files via upload

* Delete readme

* contacts componenet added

* contacts component added

* contact added in Dash board menu

* Create readme

* Add files via upload

* Delete readme

* Update header.component.html

* Update contacts.component.scss

* contacts sidebar removed

* Update contacts.component.html

--- a/front-end/src/app/contacts/contacts.component.html
+++ b/front-end/src/app/contacts/contacts.component.html
@@ -1,18 +1,10 @@
 <div class="contacts__main-container">
-  <div class="contacts__sidebar">
-   <!-- <div class="contacts__sidebar_categories">
-      <app-transaction-categories [hidden]="isShowFilters"
-        title="Transaction Categories"
-        (status)='onNotify($event)'>
-      </app-transaction-categories>
-    </div>-->
-    <div class="contacts__sidebar_filters">
+    <div class="contacts__sidebar_filters"  *ngIf="showSideBar">
       <app-contacts-filter [hidden]="!isShowFilters" 
         title="Filters"
         [formType]="formType">
       </app-contacts-filter>
     </div>
-  </div>
   <div class="contacts__container">
     <header>
       <div class="header-content">
