--- a/front-end/src/app/shared/partials/header/header.component.html
+++ b/front-end/src/app/shared/partials/header/header.component.html
@@ -16,7 +16,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" [routerLink]="['/contacts']">
-                Contact
+                Contacts
               </a>
             </li>
   
