--- a/front-end/src/app/contacts/contacts-table/contacts-table.component.scss
+++ b/front-end/src/app/contacts/contacts-table/contacts-table.component.scss
@@ -1,7 +1,7 @@
 @import '../../shared/scss/global';
 
 .contacts__table-container {
-
+  padding-right: 5px;
   .contacts__page-item-range {
     padding: .5em .1em 0 0 ;
   }
