--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -66,6 +66,11 @@
           &.info-text {
             padding-top: 45px;
           }
+          &.fieldset {
+            font-size: 1.5rem;
+            font-family: sans-serif;
+            font-weight: bold;
+          }
           label {
             display: block;
             padding-bottom: 0.75em;
