Fixing state dropdown width

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -105,6 +105,7 @@
             }
           }
           .ng-dropdown-panel {
+            width: 235px;
             .ng-dropdown-panel-items {
               .ng-option {
                 &.ng-option-marked {
