--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -48,7 +48,7 @@
     </div>
     <div class="form-sidebar__btns">
       <div class="btn-row">
-        <button type="button" class="btn btn-secondary-gray" [routerLink]="['/forms/form/', '3X']"
+        <button type="button" class="btn btn-secondary-gray" (click)="viewSummary()" [routerLink]="['/forms/form/', '3X']"
           [queryParams]="{ step: 'financial_summary' }">
           Summary
         </button>
