Making changes to sign and submit route

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -1,6 +1,6 @@
 <div class="forms__wizard" *ngIf="!loadingData">
   <!--div class="form__sidebar" *ngIf="step !== 'financial_summary'">-->
-  <div class="form__sidebar" >
+  <div class="form__sidebar">
     <div [hidden]="step !== 'step_1'">
       <report-type-sidebar
         title="Report Coverage Dates"
@@ -12,7 +12,7 @@
       </report-type-sidebar>
     </div>
     <div *ngIf="step === 'step_2' || step === 'step_3' || step === 'financial_summary'">
-    <transaction-sidebar
+      <transaction-sidebar
         [step]="step"
         title="Transaction Categories"
         [transactionCategories]="transactionCategories"
@@ -83,11 +83,11 @@
       </div>
 
       <div class="form__step" [hidden]="step !== 'step_5'">
-        <f3x-sign></f3x-sign>
+        <app-sign></app-sign>
       </div>
 
       <div class="form__step" [hidden]="step !== 'step_6'">
-        <f3x-submit></f3x-submit>
+        <app-submit></app-submit>
       </div>
     </div>
   </div>
