Fixing form 3X navigation issue

--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -7,13 +7,6 @@
       <span class="fa fa-search"></span>
       <input type="text" placeholder="Search by Type" />
     </div>
-
-    <!-- <div class="search-field-container">
-      <div class="form-group ml-1 mt-2">
-        <input type="text" name="search" class="search-input" placeholder="Search by Type" class="form-control py-1" />
-        <span class="search-icon" aria-hidden="true"></span>
-      </div>
-    </div> -->
   </header>
   <section>
     <ul class="form-sidebar__links">
@@ -62,7 +55,7 @@
         <div class="btn-row">
           <button
             type="button"
-            class="btn btn-secondary-gray"
+            class="btn btn-secondary"
             [routerLink]="['/forms/form/', '3X']"
             [queryParams]="{ step: 'step_5' }"
           >
