pass transaction type to individual receipt as input

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -73,6 +73,7 @@
           [formOptionsVisible]="formOptionsVisible"
           [selectedOptions]="selectedOptions"
           [transactionTypeText]="transactionTypeText"
+          [transactionType]="transactionType"
           (status)="onNotify($event)"
         >
         </f3x-individual-receipt>
