--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -22,18 +22,16 @@
             </div>
           </div>
         </div>
-        <div class="grid-row" *ngIf="(frmSignee.invalid || (frmSignee.dirty || frmSignee.touched))">
+        <div class="grid-row" *ngIf="frmSignee.invalid || (frmSignee.dirty || frmSignee.touched)">
           <div class="grid-row__col grid-row__col--12">
             <div class="text-error text-center" *ngIf="signFailed">
               You must certify this form.
             </div>
           </div>
         </div>
-        <div class="grid-row" *ngIf="(frmSignee.controls.signee.valid) && frmSaved">
+        <div class="grid-row" *ngIf="frmSignee.controls.signee.valid && frmSaved">
           <div class="grid-row__col grid-row__col--12" [hidden]="hideText">
-            <div class="text-info text-center">
-              Form {{ formType }} has been successfully saved.
-            </div>
+            <div class="text-info text-center">Form {{ formType }} has been successfully saved.</div>
           </div>
         </div>
         <form [formGroup]="frmSignee" (ngSubmit)="doSubmitForm()">
@@ -45,17 +43,29 @@
               </ng-template>
               <label>
                 <strong>Signee*</strong>
-                <button type="button" class="btn btn-info" [ngbTooltip]="tipContent" #t2="ngbTooltip"
-                  (click)="toggleToolTip(t2)" triggers="manual" tooltipClass="custom-tooltip-class" placement="right">
+                <button
+                  type="button"
+                  class="btn btn-info"
+                  [ngbTooltip]="tipContent"
+                  #t2="ngbTooltip"
+                  (click)="toggleToolTip(t2)"
+                  triggers="manual"
+                  tooltipClass="custom-tooltip-class"
+                  placement="right"
+                >
                   <i class="info-icon" aria-hidden="true"></i>
                   <span class="sr-only">Click here for more information</span>
                 </button>
               </label>
               <div>
                 <span>
-                  <input type="radio" name="signee"
+                  <input
+                    type="radio"
+                    name="signee"
                     [value]="committee_details?.treasurerfirstname + ' ' + committee_details?.treasurerlastname"
-                    [checked]="true" formControlName="signee" />
+                    [checked]="true"
+                    formControlName="signee"
+                  />
                   {{ committee_details?.treasurerfirstname }} {{ committee_details?.treasurerlastname }}
                 </span>
                 <br />
@@ -64,17 +74,17 @@
             </div>
             <div class="grid-row__col grid-row__col--6">
               <label><strong>Date*</strong></label>
-              <div>
-                {{ date_stamp.getMonth() + 1 }}/{{ date_stamp.getDate() }}/{{ date_stamp.getFullYear() }}
-              </div>
+              <div>{{ date_stamp.getMonth() + 1 }}/{{ date_stamp.getDate() }}/{{ date_stamp.getFullYear() }}</div>
             </div>
           </div>
 
           <div class="grid-row">
             <div class="grid-row__col grid-row__col--12 border-bottom">
               If your name is not listed, please
-              <a class="form1-link" href="https://test-webforms.fec.gov/webforms/form1/index.htm" target="_blank">click
-                here</a> to amend Form 1.
+              <a class="form1-link" href="https://test-webforms.fec.gov/webforms/form1/index.htm" target="_blank"
+                >click here</a
+              >
+              to amend Form 1.
             </div>
           </div>
           <div class="grid-row">
@@ -104,10 +114,18 @@
               <br />
               <label for="additional_email_1"> Additional Email 1</label> <br />
               <ng-container>
-                <input type="email" name="additional_email_1" value="" (change)="changeAdditionalEmail($event)"
-                  (blur)="updateAdditionalEmail($event)" formControlName="additional_email_1" autocomplete="off">
-              </ng-container> &nbsp;&nbsp;
-              <div *ngIf="(frmSignee.invalid && (frmSignee.dirty || frmSignee.touched))">
+                <input
+                  type="email"
+                  name="additional_email_1"
+                  value=""
+                  (change)="changeAdditionalEmail($event)"
+                  (blur)="updateAdditionalEmail($event)"
+                  formControlName="additional_email_1"
+                  autocomplete="off"
+                />
+              </ng-container>
+              &nbsp;&nbsp;
+              <div *ngIf="frmSignee.invalid && (frmSignee.dirty || frmSignee.touched)">
                 <div class="text-error" *ngIf="frmSignee.controls.additional_email_1.errors?.email">
                   &nbsp;Additional email 1 must <br />&nbsp;be valid email address.
                 </div>
@@ -119,24 +137,33 @@
               <label for="confirm_email_1"> Confirm Email 1</label>
               &nbsp;&nbsp;
               <ng-container>
-                <input type="email" name="confirm_email_1" value="" (change)="changeAdditionalEmail($event)"
-                  (blur)="updateAdditionalEmail($event)" formControlName="confirm_email_1" autocomplete="off">
+                <input
+                  type="email"
+                  name="confirm_email_1"
+                  value=""
+                  (change)="changeAdditionalEmail($event)"
+                  (blur)="updateAdditionalEmail($event)"
+                  formControlName="confirm_email_1"
+                  autocomplete="off"
+                />
               </ng-container>
-              <div *ngIf="(frmSignee.invalid && (frmSignee.dirty || frmSignee.touched))">
+              <div *ngIf="frmSignee.invalid && (frmSignee.dirty || frmSignee.touched)">
                 <div class="text-error" *ngIf="frmSignee.controls.confirm_email_1.errors?.email">
-                  &nbsp;Confirm email 1 must<br /> be valid email address.
+                  &nbsp;Confirm email 1 must<br />
+                  be valid email address.
                 </div>
               </div>
             </div>
 
             <div class="grid-row__col grid-row__col--3">
-              <br /> &nbsp;&nbsp;
+              <br />
+              &nbsp;&nbsp;
               <div class="text-error" *ngIf="additionalEmail1Invalid && showAdditionalEmail1Warn">
                 <br />
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Confirm additional email 1.
               </div>
               <div class="text-success" *ngIf="!additionalEmail1Invalid && showAdditionalEmail1Warn">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{this.confirm_email_1}}<br />
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ this.confirm_email_1 }}<br />
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;has been successfully added.
               </div>
             </div>
@@ -152,10 +179,17 @@
               <label for="additional_email_2"> Additional Email 2</label>
               &nbsp;&nbsp;
               <ng-container>
-                <input type="email" name="additional_email_2" value="" (change)="changeAdditionalEmail($event)"
-                  (blur)="updateAdditionalEmail($event)" formControlName="additional_email_2" autocomplete="off">
+                <input
+                  type="email"
+                  name="additional_email_2"
+                  value=""
+                  (change)="changeAdditionalEmail($event)"
+                  (blur)="updateAdditionalEmail($event)"
+                  formControlName="additional_email_2"
+                  autocomplete="off"
+                />
               </ng-container>
-              <div *ngIf="(frmSignee.invalid && (frmSignee.dirty || frmSignee.touched))">
+              <div *ngIf="frmSignee.invalid && (frmSignee.dirty || frmSignee.touched)">
                 <div class="text-error" *ngIf="frmSignee.controls.additional_email_2.errors?.email">
                   &nbsp;Additional email 2 must <br />&nbsp;&nbsp;be valid email address.
                 </div>
@@ -166,10 +200,18 @@
               <br />
               <label for="confirm_email_2"> Confirm Email 2 </label>
               &nbsp;&nbsp;
-              <ng-container><input type="email" name="confirm_email_2" value="" (change)="changeAdditionalEmail($event)"
-                  (blur)="updateAdditionalEmail($event)" formControlName="confirm_email_2" autocomplete="off">
+              <ng-container
+                ><input
+                  type="email"
+                  name="confirm_email_2"
+                  value=""
+                  (change)="changeAdditionalEmail($event)"
+                  (blur)="updateAdditionalEmail($event)"
+                  formControlName="confirm_email_2"
+                  autocomplete="off"
+                />
               </ng-container>
-              <div *ngIf="(frmSignee.invalid && (frmSignee.dirty || frmSignee.touched))">
+              <div *ngIf="frmSignee.invalid && (frmSignee.dirty || frmSignee.touched)">
                 <div class="text-error" *ngIf="frmSignee.controls.confirm_email_2.errors?.email">
                   &nbsp;Confirm email 2 must <br />be valid email address.
                 </div>
@@ -185,17 +227,16 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Confirm additional email 2.
               </div>
               <div class="text-success" *ngIf="!additionalEmail2Invalid && showAdditionalEmail2Warn">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{this.confirm_email_2}}<br />
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ this.confirm_email_2 }}<br />
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;has been successfully added.
               </div>
             </div>
           </div>
 
           <!-- this div-->
-
-
         </form>
-      </div> <!-- ./content -->
+      </div>
+      <!-- ./content -->
     </section>
     <footer>
       <div class="grid-row">
@@ -210,12 +251,17 @@
       <div class="grid-row">
         <div class="grid-row__col grid-row__col--12">
           <div class="forms__agreement-text">
-            <input type="checkbox" id="agreement" name="agreement" value="yes" (change)="updateValidation($event)"
-              formControlName="agreement" />
+            <input
+              type="checkbox"
+              id="agreement"
+              name="agreement"
+              value="yes"
+              (change)="updateValidation($event)"
+              formControlName="agreement"
+            />
             <label class="agreement__text" for="agreement">
-              I certify that I have examined this statement
-              and to the best of my knowledge and belief it
-              is true, correct, and complete.
+              I certify that I have examined this statement and to the best of my knowledge and belief it is true,
+              correct, and complete.
             </label>
           </div>
         </div>
@@ -234,4 +280,5 @@
       </div>
     </footer>
   </form>
-</div> <!-- ./signee-container -->
+</div>
+<!-- ./signee-container -->
