Fne 1251 sprint17 mahendra (#730)
* FNE-1254 changes

* FNE-1254 changes

* FNE-1254 changes

* FNE-1254 changes

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -28,7 +28,7 @@
       'hide-alerts': step === 'step_6'
     }"
   >
-    <div class="form__steps" *ngIf="step !== 'financial_summary'">
+    <div class="form__steps">
       <app-steps
         [steps]="[
           { text: 'Report', step: 'step_1' },
