--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -1,6 +1,7 @@
 <div class="transactions__main-container">
   <div class="form__sidebar">
       <transaction-sidebar
+        [hidden]="isShowFilters"
         [step]="step"
         title="Transaction Categories new"
         [transactionCategories]="transactionCategories"
